added basic connection between frontend and backend

--- a/projects/project1/src/frontend/html/login.html
+++ b/projects/project1/src/frontend/html/login.html
@@ -7,8 +7,8 @@
         <main>
             Employee Reimbursment Service
             <br>
-            <input type="username" id="userName" />
-            <input type="password" id="userPass" />
+            <input type="text" id="userName" />
+            <input type="text" id="userPass" />
             <button type="button" id="login">Login</button>
         </main>
         <script src="../js/main.js"></script>
