added blank html files for navigation. Added Exceptions.

--- a/projects/project1/src/frontend/html/viewEmp.html
+++ b/projects/project1/src/frontend/html/viewEmp.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <main>
-            The Homepage
+            View Employees
             <br>
             <a href = "accountEmp.html"> Eemployee Account</a>
             <a href = "accountMan.html"> Manager Account</a>
