--- a/projects/project1/src/frontend/html/accountMan.html
+++ b/projects/project1/src/frontend/html/accountMan.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <main>
-            The Homepage
+            Manager Account Details
             <br>
             <a href = "accountEmp.html"> Eemployee Account</a>
             <a href = "accountMan.html"> Manager Account</a>
