--- a/projects/project1/src/frontend/html/login.html
+++ b/projects/project1/src/frontend/html/login.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8"/>
         <title>Login</title>
     </head>
     <body>
@@ -10,6 +10,14 @@
             <input type="text" id="userName" />
             <input type="text" id="userPass" />
             <button type="button" id="login">Login</button>
+            <a href = "accountEmp.html"> Eemployee Account</a>
+            <a href = "accountMan.html"> Manager Account</a>
+            <a href = "homepage.html">Homepage</a>
+            <a href = "login.html">Login</a>
+            <a href = "submitreq.html">Submit Requests</a>
+            <a href = "viewEmp.html"> View Employee</a>
+            <a href = "viewreq.html">View Requests</a>
+            <a href = "viewreqM.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/login.js"></script>
