added functionality to servlets. Created basic html for all functions

--- a/projects/project1/src/frontend/html/submitreq.html
+++ b/projects/project1/src/frontend/html/submitreq.html
@@ -6,7 +6,17 @@
     <body>
         <main>
             Submit Requests
+            Employee Reimbursment Service
             <br>
+            <select id = "type">
+                <option>Food</option>
+                <option>Travel</option>
+                <option>Lodging</option>
+                <option>Other</option>
+            </select>
+            <input type="text" id="desc" />
+            <input type="text" id="amount" />
+            <button type="button" id="submit">Submit</button>
             <a href = "accountEmp.html"> Eemployee Account</a>
             <a href = "accountMan.html"> Manager Account</a>
             <a href = "homepage.html">Homepage</a>
@@ -17,5 +27,6 @@
             <a href = "viewreqM.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
+        <script src = "../js/submitreq.js"></script>
     </body>
 </html>
