--- a/projects/project1/src/frontend/html/viewreq.html
+++ b/projects/project1/src/frontend/html/viewreq.html
@@ -17,5 +17,6 @@
             <a href = "viewreqM.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
+        <script src="../js/viewReq.js"></script>
     </body>
 </html>
