added ticket viewing functionality. updated login.html and main.css

--- a/projects/project1/src/frontend/html/account.html
+++ b/projects/project1/src/frontend/html/account.html
@@ -1,21 +1,21 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Home</title>
+        <title>Account</title>
+        <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
         <main>
-            View Requests Managers
+            <h3>Account Details</h3>
             <br>
-            <a href = "accountEmp.html"> Eemployee Account</a>
-            <a href = "accountMan.html"> Manager Account</a>
+            <a href = "account.html"> Eemployee Account</a>
             <a href = "homepage.html">Homepage</a>
             <a href = "login.html">Login</a>
             <a href = "submitreq.html">Submit Requests</a>
             <a href = "viewEmp.html"> View Employee</a>
             <a href = "viewreq.html">View Requests</a>
-            <a href = "viewreqM.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
+        <script src="../js/account.js"></script>
     </body>
 </html>
