--- a/projects/project1/src/frontend/html/homepage.html
+++ b/projects/project1/src/frontend/html/homepage.html
@@ -2,10 +2,11 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Home</title>
+        <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
         <main>
-            The Homepage
+            <h2>Employeee Reimbursement Service</h2>
             <br>
             <a href = "accountEmp.html"> Eemployee Account</a>
             <a href = "accountMan.html"> Manager Account</a>
