--- a/projects/project1/src/frontend/html/viewEmp.html
+++ b/projects/project1/src/frontend/html/viewEmp.html
@@ -7,14 +7,15 @@
         <main>
             View Employees
             <br>
-            <a href = "accountEmp.html"> Eemployee Account</a>
-            <a href = "accountMan.html"> Manager Account</a>
+            <section id = "nameDiv"></section>
+            <section id = "imageDiv"></section>
+            <section id="tableDiv"></section>
+            <a href = "account.html"> Eemployee Account</a>
             <a href = "homepage.html">Homepage</a>
             <a href = "login.html">Login</a>
             <a href = "submitreq.html">Submit Requests</a>
             <a href = "viewEmp.html"> View Employee</a>
             <a href = "viewreq.html">View Requests</a>
-            <a href = "viewreqM.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/viewUsers.js"></script>
