added navbar. added some basic styling

--- a/projects/project1/src/frontend/html/viewreq.html
+++ b/projects/project1/src/frontend/html/viewreq.html
@@ -2,17 +2,16 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Home</title>
+        <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
+        <nav>
+            <ul>
+                <div id = "navBar"></div>
+            </ul>
+        </nav>
         <main>
             View Requests
-            <br>
-            <a href = "account.html"> Eemployee Account</a>
-            <a href = "homepage.html">Homepage</a>
-            <a href = "login.html">Login</a>
-            <a href = "submitreq.html">Submit Requests</a>
-            <a href = "viewEmp.html"> View Employee</a>
-            <a href = "viewreq.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/viewReq.js"></script>
