--- a/projects/project1/src/frontend/html/account.html
+++ b/projects/project1/src/frontend/html/account.html
@@ -5,15 +5,13 @@
         <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
+        <nav>
+            <ul>
+                <div id = "navBar"></div>
+            </ul>
+        </nav>
         <main>
             <h3>Account Details</h3>
-            <br>
-            <a href = "account.html"> Eemployee Account</a>
-            <a href = "homepage.html">Homepage</a>
-            <a href = "login.html">Login</a>
-            <a href = "submitreq.html">Submit Requests</a>
-            <a href = "viewEmp.html"> View Employee</a>
-            <a href = "viewreq.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/account.js"></script>
