--- a/projects/project1/src/frontend/html/homepage.html
+++ b/projects/project1/src/frontend/html/homepage.html
@@ -5,18 +5,13 @@
         <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
-        <main>
-            <h2>Employeee Reimbursement Service</h2>
-            <br>
-            <a href = "accountEmp.html"> Eemployee Account</a>
-            <a href = "accountMan.html"> Manager Account</a>
-            <a href = "homepage.html">Homepage</a>
-            <a href = "login.html">Login</a>
-            <a href = "submitreq.html">Submit Requests</a>
-            <a href = "viewEmp.html"> View Employee</a>
-            <a href = "viewreq.html">View Requests</a>
-            <a href = "viewreqM.html">View Requests</a>
-        </main>
+        <nav>
+            <ul>
+                <div id = "navBar"></div>
+            </ul>
+        </nav>
+        <h1 id = "welcome"></h1>
         <script src="../js/main.js"></script>
+        <script src="../js/index.js"></script>
     </body>
 </html>
