--- a/projects/project1/src/frontend/html/login.html
+++ b/projects/project1/src/frontend/html/login.html
@@ -5,24 +5,18 @@
         <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
+        <nav>
+            <ul>
+                <div id = "navBar"></div>
+            </ul>
+        </nav>
         <main>
-            
-            Employee Reimbursment Service
+            <h1>Welcome to Reimbursement Pro</h1>
             <br>
-            <div class="navbar">
-                <section>
-                    <a href = "account.html"> Eemployee Account</a>
-                    <a href = "homepage.html">Homepage</a>
-                    <a href = "login.html">Login</a>
-                    <a href = "submitreq.html">Submit Requests</a>
-                    <a href = "viewEmp.html"> View Employee</a>
-                    <a href = "viewreq.html">View Requests</a>
-                </section>
-            </div>
             <div class = "logInfo">
-                <input type="text" id="userName"/>
+                <input type="text" placeholder = "Username" id="userName"/>
                 <br>
-                <input type="text" id="userPass" />
+                <input type="text" placeholder = "Password" id="userPass" />
                 <br>
                 <button type="button" id="login">Login</button>
             </div>
