--- a/projects/project1/src/frontend/html/submitreq.html
+++ b/projects/project1/src/frontend/html/submitreq.html
@@ -2,8 +2,14 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Home</title>
+        <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
+        <nav>
+            <ul>
+                <div id = "navBar"></div>
+            </ul>
+        </nav>
         <main>
             Submit Requests
             Employee Reimbursment Service
@@ -17,14 +23,6 @@
             <input type="text" id="desc" />
             <input type="text" id="amount" />
             <button type="button" id="submit">Submit</button>
-            <a href = "accountEmp.html"> Eemployee Account</a>
-            <a href = "accountMan.html"> Manager Account</a>
-            <a href = "homepage.html">Homepage</a>
-            <a href = "login.html">Login</a>
-            <a href = "submitreq.html">Submit Requests</a>
-            <a href = "viewEmp.html"> View Employee</a>
-            <a href = "viewreq.html">View Requests</a>
-            <a href = "viewreqM.html">View Requests</a>
         </main>
         <script src="../js/main.js"></script>
         <script src = "../js/submitreq.js"></script>
