--- a/projects/project1/src/frontend/html/viewEmp.html
+++ b/projects/project1/src/frontend/html/viewEmp.html
@@ -2,20 +2,21 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Home</title>
+        <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
+        <nav>
+        <ul>
+            <div id = "navBar"></div>
+        </ul>
+    </nav>
         <main>
             View Employees
             <br>
             <section id = "nameDiv"></section>
             <section id = "imageDiv"></section>
             <section id="tableDiv"></section>
-            <a href = "account.html"> Eemployee Account</a>
-            <a href = "homepage.html">Homepage</a>
-            <a href = "login.html">Login</a>
-            <a href = "submitreq.html">Submit Requests</a>
-            <a href = "viewEmp.html"> View Employee</a>
-            <a href = "viewreq.html">View Requests</a>
+            
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/viewUsers.js"></script>
