--- a/projects/project1/src/frontend/html/account.html
+++ b/projects/project1/src/frontend/html/account.html
@@ -12,6 +12,18 @@
         </nav>
         <main>
             <h3>Account Details</h3>
+            <hr>
+            <p> Type into the field you wish to change</p>
+            <br>
+            <div class = "accountInfo">
+                <input type="text" placeholder = "" id="name"/>
+                <h5>Account Name</h5>
+                <input type="text" placeholder = "" id="username" />
+                <h5>Username</h5>
+                <input type="text" placeholder = "" id="password" />
+                <h5>Password</h5>
+                <button type="button" id="update">Update</button>
+            </div>
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/account.js"></script>
