view employees completed

--- a/projects/project1/src/frontend/html/viewEmp.html
+++ b/projects/project1/src/frontend/html/viewEmp.html
@@ -11,12 +11,10 @@
         </ul>
     </nav>
         <main>
-            View Employees
+            <h3>Table of Employees</h3>
+            <hr>
             <br>
-            <section id = "nameDiv"></section>
-            <section id = "imageDiv"></section>
             <section id="tableDiv"></section>
-            
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/viewUsers.js"></script>
