--- a/projects/project1/src/frontend/html/viewreq.html
+++ b/projects/project1/src/frontend/html/viewreq.html
@@ -11,7 +11,10 @@
             </ul>
         </nav>
         <main>
-            View Requests
+            <h1>View Requests</h1>
+            <hr>
+            <br>
+            <section id="tableDiv"></section>
         </main>
         <script src="../js/main.js"></script>
         <script src="../js/viewReq.js"></script>
