--- a/projects/project1/src/frontend/html/submitreq.html
+++ b/projects/project1/src/frontend/html/submitreq.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Home</title>
+        <title>Submit Reimbursement Requests</title>
         <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
