--- a/projects/project1/src/frontend/html/viewEmp.html
+++ b/projects/project1/src/frontend/html/viewEmp.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Home</title>
+        <title>View Employees</title>
         <link rel="stylesheet" href="../css/main.css"/>
     </head>
     <body>
