added styling to images. Cleaned up html files

--- a/projects/project1/src/frontend/html/homepage.html
+++ b/projects/project1/src/frontend/html/homepage.html
@@ -11,7 +11,14 @@
             </ul>
         </nav>
         <h1 id = "welcome"></h1>
+        <img src = "../images/pexels-cottonbro-3943723.jpg" alt = "Picture of a small piggy bank with money spilling out">
+        <h6>Photo by: <a href = "https://www.pexels.com/photo/person-putting-coin-in-a-piggy-bank-3943723/">Cottonbro</a></h6>
+
+        <!----Image found: https://www.pexels.com/photo/person-putting-coin-in-a-piggy-bank-3943723/ by cottonbro royalty free-->
         <script src="../js/main.js"></script>
         <script src="../js/index.js"></script>
     </body>
+    <footer>
+        <span> 061322-VA-JavaMSA Project 1</span>
+    </footer>
 </html>
