--- a/projects/project1/src/frontend/html/submitreq.html
+++ b/projects/project1/src/frontend/html/submitreq.html
@@ -32,4 +32,7 @@
         <script src="../js/main.js"></script>
         <script src = "../js/submitreq.js"></script>
     </body>
+    <footer>
+        <span> 061322-VA-JavaMSA Project 1</span>
+    </footer>
 </html>
