--- a/projects/project1/src/frontend/html/viewreqM.html
+++ b/projects/project1/src/frontend/html/viewreqM.html
@@ -30,4 +30,7 @@
         <script src="../js/main.js"></script>
         <script src="../js/viewReqM.js"></script>
     </body>
+    <footer>
+        <span> 061322-VA-JavaMSA Project 1</span>
+    </footer>
 </html>
