--- a/projects/project1/src/frontend/html/account.html
+++ b/projects/project1/src/frontend/html/account.html
@@ -28,4 +28,7 @@
         <script src="../js/main.js"></script>
         <script src="../js/account.js"></script>
     </body>
+    <footer>
+        <span> 061322-VA-JavaMSA Project 1</span>
+    </footer>
 </html>
