--- a/projects/project1/src/frontend/html/login.html
+++ b/projects/project1/src/frontend/html/login.html
@@ -24,4 +24,7 @@
         <script src="../js/main.js"></script>
         <script src="../js/login.js"></script>
     </body>
+    <footer>
+        <span> 061322-VA-JavaMSA Project 1</span>
+    </footer>
 </html>
