--- a/projects/project1/src/frontend/html/viewEmp.html
+++ b/projects/project1/src/frontend/html/viewEmp.html
@@ -19,4 +19,7 @@
         <script src="../js/main.js"></script>
         <script src="../js/viewUsers.js"></script>
     </body>
+    <footer>
+        <span> 061322-VA-JavaMSA Project 1</span>
+    </footer>
 </html>
