--- a/projects/project1/src/frontend/html/login.html
+++ b/projects/project1/src/frontend/html/login.html
@@ -16,7 +16,7 @@
             <div class = "logInfo">
                 <input type="text" placeholder = "Username" id="userName"/>
                 <br>
-                <input type="text" placeholder = "Password" id="userPass" />
+                <input type="password" placeholder = "Password" id="userPass" />
                 <br>
                 <button type="button" id="login">Login</button>
             </div>
